Provide configurable test report title
Closes #6

--- a/anfema_django_testutils/templates/test-results-template.html
+++ b/anfema_django_testutils/templates/test-results-template.html
@@ -10,7 +10,7 @@
     <body>
         <div>
             <div class="test-report-summary">
-                <h1>Test Results</h1>
+                <h1>{{ title }}</h1>
                 <table>
                     <tr>
                         <th>Timestamp:</th>
