Support filter by results
Closes #15

--- a/anfema_django_testutils/templates/test-results-template.html
+++ b/anfema_django_testutils/templates/test-results-template.html
@@ -6,6 +6,8 @@
         <title>Test-Report</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="test-results.css" type="text/css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+        <script type="text/javascript" src="test-results.js" defer></script>
     </head>
     <body>
         <div>
@@ -60,137 +62,122 @@
                     </tr>
                 </table>
             </div>
-            <div class="container">
-                {% for testcase, testcase_results in testcases.items %}
-                    <div class="testcase">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>{{ testcase }}</th>
-                                    <th>Duration</th>
-                                    <th>
-                                        Result
-                                    </th>
-                                    <th>
-                                        <button class="btn-testcase-details">
-                                            &ctdot;
-                                        </button>
-                                    </th>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="color-bar">
-                                            {% with result_width=testcase_results.summary.skipped|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.skipped %}
-                                                <div class="skipped" style="width:{{ result_width }}%;">
-                                                    {{ result_width }}
-                                                </div>
-                                            {% endwith %}
-                                            {% with result_width=testcase_results.summary.passed|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.passed %}
-                                                <div class="passed" style="width:{{ result_width }}%;">
-                                                    {{ result_width }}
-                                                </div>
-                                            {% endwith %}
-                                            {% with result_width=testcase_results.summary.precondition_failure|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.precondition_failure %}
-                                                <div class="precondition_failure" style="width:{{ result_width }}%;">
-                                                    {{ result_width }}
-                                                </div>
-                                            {% endwith %}
-                                            {% with result_width=testcase_results.summary.failure|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.failure %}
-                                                <div class="failure" style="width:{{ result_width }}%;">
-                                                    {{ result_width }}
-                                                </div>
-                                            {% endwith %}
-                                            {% with result_width=testcase_results.summary.expected_failure|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.expected_failure %}
-                                                <div class="expected_failure" style="width:{{ result_width }}%;">
-                                                    {{ result_width }}
-                                                </div>
-                                            {% endwith %}
-                                            {% with result_width=testcase_results.summary.unexpected_success|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.unexpected_success %}
-                                                <div class="unexpected_success" style="width:{{ result_width }}%;">
-                                                    {{ result_width }}
-                                                </div>
-                                            {% endwith %}
-                                            {% with result_width=testcase_results.summary.error|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.error %}
-                                                <div class="error" style="width:{{ result_width }}%;">
-                                                    {{ result_width }}
-                                                </div>
-                                            {% endwith %}
-                                        </div>
-                                    </td>
-                                    <td>
-                                        {{ testcase_results.summary.duration.total_seconds }}s
-                                    </td>
-                                    <td/>
-                                    <td/>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for test in testcase_results.tests %}
-                                    <tr class="testrun" style=background-color:var(--{{ test.result }})>
-                                        <td>
-                                            {{ test.name }}
-                                        </td>
-                                        <td>
-                                            {{ test.duration.total_seconds }}s
-                                        </td>
-                                        <td>
-                                            {{ test.result }}
-                                        </td>
-                                        <td align="center">
-                                            {% if test.result != 'passed' %}
-                                                <button class="btn-testrun-details">
-                                                    View
-                                                </button>
-                                            {% endif %}
-                                        </td>
-                                    </tr>
-                                    <tr style="display: none">
-                                        <td class="testrun-outcome">
-                                            <pre>{{ test.outcome }}</pre>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                {% endfor %}
+            <div>
+                <form action="/action_page.php">
+                    <label for="selection-result-filter">
+                        Filter by result:
+                    </label>
+                    <select name="result-filter" id="selection-result-filter">
+                        <option value="all">
+                            ----
+                        </option>
+                        {% for result_name in supported_results %}
+                            <option value="{{ result_name }}">
+                                {{ result_name }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                </form>
             </div>
+            {% for testcase, testcase_results in testcases.items %}
+                <div class="testcase">
+                    <table id="testcase-results">
+                        <thead>
+                            <tr>
+                                <th>
+                                    {{ testcase }}
+                                </th>
+                                <th>
+                                    Duration
+                                </th>
+                                <th>
+                                    Result
+                                </th>
+                                <th>
+                                    <button class="btn-testcase-details">
+                                        &ctdot;
+                                    </button>
+                                </th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="color-bar">
+                                        {% with result_width=testcase_results.summary.skipped|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.skipped %}
+                                            <div class="skipped" style="width:{{ result_width }}%;">
+                                                {{ result_width }}
+                                            </div>
+                                        {% endwith %}
+                                        {% with result_width=testcase_results.summary.passed|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.passed %}
+                                            <div class="passed" style="width:{{ result_width }}%;">
+                                                {{ result_width }}
+                                            </div>
+                                        {% endwith %}
+                                        {% with result_width=testcase_results.summary.precondition_failure|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.precondition_failure %}
+                                            <div class="precondition_failure" style="width:{{ result_width }}%;">
+                                                {{ result_width }}
+                                            </div>
+                                        {% endwith %}
+                                        {% with result_width=testcase_results.summary.failure|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.failure %}
+                                            <div class="failure" style="width:{{ result_width }}%;">
+                                                {{ result_width }}
+                                            </div>
+                                        {% endwith %}
+                                        {% with result_width=testcase_results.summary.expected_failure|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.expected_failure %}
+                                            <div class="expected_failure" style="width:{{ result_width }}%;">
+                                                {{ result_width }}
+                                            </div>
+                                        {% endwith %}
+                                        {% with result_width=testcase_results.summary.unexpected_success|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.unexpected_success %}
+                                            <div class="unexpected_success" style="width:{{ result_width }}%;">
+                                                {{ result_width }}
+                                            </div>
+                                        {% endwith %}
+                                        {% with result_width=testcase_results.summary.error|div:testcase_results.summary.totals|mul:100 result=testcase_results.summary.error %}
+                                            <div class="error" style="width:{{ result_width }}%;">
+                                                {{ result_width }}
+                                            </div>
+                                        {% endwith %}
+                                    </div>
+                                </td>
+                                <td>
+                                    {{ testcase_results.summary.duration.total_seconds }}s
+                                </td>
+                                <td/>
+                                <td/>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for test in testcase_results.tests %}
+                                <tr class="testrun" style=background-color:var(--{{ test.result }}) result="{{ test.result }}">
+                                    <td>
+                                        {{ test.name }}
+                                    </td>
+                                    <td>
+                                        {{ test.duration.total_seconds }}s
+                                    </td>
+                                    <td>
+                                        {{ test.result }}
+                                    </td>
+                                    <td align="center">
+                                        {% if test.result != 'passed' %}
+                                            <button class="btn-testrun-details">
+                                                View
+                                            </button>
+                                        {% endif %}
+                                    </td>
+                                </tr>
+                                <tr style="display: none">
+                                    <td class="testrun-outcome">
+                                        <pre>{{ test.outcome }}</pre>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            {% endfor %}
         </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script type="text/javascript">
-            $(document).ready(function(){
-                $('th').on('click', '.btn-testcase-details', function(e){
-                    e.preventDefault();
-                    e.stopImmediatePropagation();
-                    var $this = $(this);
-                    $(this).parents("table").find("tbody").toggle();
-                    $this.text(function(i, text){
-                        if (text === '\u22EF') {
-                            return 'Hide';
-                        } else {
-                            return '\u22EF';
-                        };
-                    });
-                });
-            });
-    </script>
-    <script type="text/javascript">
-            $(document).ready(function(){
-                $('td').on('click', '.btn-testrun-details', function(e){
-                    e.preventDefault();
-                    e.stopImmediatePropagation();
-                    var $this = $(this);
-                    $(this).closest("tr").next('tr').toggle();
-                    $this.text(function(i, text){
-                        if (text === 'View') {
-                            return 'Hide';
-                        } else {
-                            return 'View';
-                        };
-                    });
-                });
-            });
-    </script>
+</div>
 </body>
 </html>
