Add space between summary and filter selection
Closes #15

--- a/anfema_django_testutils/templates/test-results-template.html
+++ b/anfema_django_testutils/templates/test-results-template.html
@@ -62,7 +62,7 @@
                     </tr>
                 </table>
             </div>
-            <div>
+            <div class="container">
                 <form action="/action_page.php">
                     <label for="selection-result-filter">
                         Filter by result:
