Removes action from form
Closes #15

--- a/anfema_django_testutils/templates/test-results-template.html
+++ b/anfema_django_testutils/templates/test-results-template.html
@@ -63,7 +63,7 @@
                 </table>
             </div>
             <div class="container">
-                <form action="/action_page.php">
+                <form>
                     <label for="selection-result-filter">
                         Filter by result:
                     </label>
